# ==============================================================================
# ABS CMake File
# ==============================================================================

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(plusula)
ADD_SUBDIRECTORY(abs)
ADD_SUBDIRECTORY(plugins)



